<resources>
    <string name="app_name">graduate_project_mobile</string>
    <string name="username">Enter your username</string>
    <string name="password">Enter your password</string>
    <string name="Cpassword">Confirm password</string>
    <string name="email">Enter your email</string>
    <string name="firstName">Enter your first name</string>
    <string name="lastName">Enter your last name</string>
    <string name="phone">Enter your phone number</string>
    <string name="age">Enter your age</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="fPassword">Forgot my password</string>
    <string name="submit">Submit</string>
    <string name="VCode">Enter here the verification code from your email</string>
    <string name="VCode2">verification code</string>
    <string name="resetPassword">Please insert your username and email to send you a verification code and change your password</string>
    <string name="checkEmail">Please check your email for the verification code !</string>
    <string name="action_settings">Settings</string>
    <string name="model">Model :</string>
    <string name="price">Price :</string>
    <string name="rating">Rating :</string>
    <string name="rent">Rent now</string>
    <string name="car_image">Car Image</string>
    <string name="moreInfo">More information about you</string>
    <string name="licenseDate">Date of driving license</string>
    <string name="information">Information that the owner must know. Max characters 500</string>
    <string name="reviews">Reviews</string>
    <string name="none">None</string>
    <string name="License">Enter the car license plate</string>
    <string name="Model">Enter the model of your car</string>
    <string name="Fuel">Fuel type</string>
    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>
    <string name="gas">Gas</string>
    <string name="electricity">Electricity</string>
    <string name="hybrid">Hybrid</string>
    <string name="Transmission">Transmission type</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>
    <string name="Days">Available Date</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="all">All</string>
    <string name="Seats">Number of seats</string>
    <string name="value">Value of the car per day</string>
    <string name="Description">Enter extra characteristics for the car like the days that is available. Max characters 500</string>
    <string name="Photo">Photo of the car</string>
    <string name="Address">Address of the car</string>
    <string name="carPlate">Car plate</string>
    <string name="days">Days</string>
    <string name="status">Status</string>
    <string name="viewMore">View More</string>
    <string name="name">Owner name</string>
    <string name="Rname">Renter name</string>
    <string name="rDay">Request day</string>
    <string name="ruDay">Request update day</string>
    <string name="review">Review</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string-array name="sorting">
        <item>Default</item>
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="filter">Rating filter</string>
    <string name="profile">My profile</string>
    <string name="Editprofile">Edit my profile</string>
    <string name="mycars">My Cars</string>
    <string name="reviewCar">Review this car</string>
    <string name="reviewUser">Review this user</string>
    <string name="selectAnother">select another one</string>
    <string name="selectADate">select a date</string>
    <string name="logout">Logout, please wait</string>
    <string name="logout2">Logout</string>
    <string name="editCar">Edit Car</string>
    <string name="Delete">Delete</string>
    <string name="editCarTitle">Edit the car with plate: </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_rent">Rent</string>
    <string name="menu_info">Info</string>
    <string name="menu_addCar">Add a car</string>
    <string name="menu_requestForCar">Requests to rent a car</string>
    <string name="menu_requestForCar2">Request for rent car</string>
    <string name="menu_requestMyCar">Request to rent my car</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_editProfile">Edit Profile</string>
    <string name="menu_profile2">Profile</string>
    <string name="menu_maps">Maps</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>